After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 656871 - Shouldn't allow to start video call with audio only contact
Shouldn't allow to start video call with audio only contact
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: VoIP
2.33.x
Other Linux
: Normal normal
: ---
Assigned To: empathy-maint
Depends on:
Blocks:
 
 
Reported: 2011-08-19 09:05 UTC by Guillaume Desmottes
Modified: 2011-08-31 08:59 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
CallWindow: make video buttons unsensitive when video not supported (1.13 KB, patch)
2011-08-31 08:24 UTC, Emilio Pozuelo Monfort
accepted-commit_now Details | Review

Description Guillaume Desmottes 2011-08-19 09:05:22 UTC
- Start an audio call with an audio-only contact
- Terminate the call
- empathy-call allows you to start a video call with this contact
Comment 1 Emilio Pozuelo Monfort 2011-08-19 19:32:39 UTC
There's also this case:

- Start a call to an audio-only contact
- Before the call is established, start your camera
- The camera button should be greyed out all the time, or it should just be hidden.
Comment 2 Emilio Pozuelo Monfort 2011-08-31 08:24:35 UTC
Created attachment 195273 [details] [review]
CallWindow: make video buttons unsensitive when video not supported

If we're calling an audio-only contact, make the camera buttons
unsensitive.
Comment 3 Guillaume Desmottes 2011-08-31 08:30:23 UTC
Review of attachment 195273 [details] [review]:

++
Comment 4 Emilio Pozuelo Monfort 2011-08-31 08:53:52 UTC
Attachment 195273 [details] pushed as 022c807 - CallWindow: make video buttons unsensitive when video not supported
Comment 5 Emilio Pozuelo Monfort 2011-08-31 08:59:28 UTC
Merged