CallWindow: make video buttons unsensitive when video not supported

If we're calling an audio-only contact, make the camera buttons
unsensitive.

https://bugzilla.gnome.org/show_bug.cgi?id=656871